# cpd-fork

./: .gitignore
trunk/: bwh_launcher.sh  bwh_postprocess.sh  bwh_preprocess.sh  bwh_runner.sh
trunk/ClipApexBase/: CMakeLists.txt  ClipApexBase.cxx  ClipApexBase.xml
trunk/Core/: VolumeSurface.m  cpd_P.m  cpd_Q.m  cpd_affine.m  cpd_affine_groupwise.m  cpd_affine_mean.m  cpd_coherent.m  cpd_dice.m  cpd_fem.m  cpd_fem_groupwise.m  cpd_fem_norigid.m  cpd_fem_only.m  cpd_groupwise.m  cpd_joint_ssm_fem.m  cpd_nonrigid_mean.m  cpd_plus_boundary_fem.m  cpd_rigid.m  cpd_rigid_fem.m  cpd_ssm.m  cpd_ssmCon.m  cpd_ssm_fem.m  cut_data.m  icp_fem.m  inpolyhedron.m  normsq.m  rotation_matrix.m  spharm_rotate.m  svd_reg.m  tet2tri.m  tight_box.m  tight_box_reg.m  tps_rpm.m
trunk/IO/: readImageDataInVTK.m  readPolyDataInVTK.m  read_fcsv.m  read_nrrd.m  read_obj.m  read_obj_fem.m  read_ssm.m  read_tetgen.m  read_vrml.m  writeImageDataInVTK.m  writePolyDataInVTK.m  write_fcsv.m  write_obj.m  write_obj_fem.m  write_ssm.m  write_stradwin.m
trunk/MeshDisplacementToDF/: CMakeLists.txt  MeshDisplacementToDF.cxx  MeshDisplacementToDF.xml
trunk/Scripts/: .fem_only_test.m.swp  add_bcpd_paths.m  add_bcpd_paths.m~  affine_cpd_test.m  bio_cpd_fem_test_better.m  bio_cpd_mr_trus_test1.m  bio_cpd_test_better.m  bwh_landmarks.m  bwh_registration.m  bwh_rigid_registration.m  cpd_fish_test.m  createBoundingFem.m  csg_dice_test.m  dice_test1.m  fem_bvtree_test.m  fem_hex_stiffness_test.m  fem_inside_bvtree_test.m  fem_model_test.m  fem_only_test.m  fem_only_test.m~  fem_tet_stiffness_test.m  fem_twomaterial_test.m  icp_fem_test.m  icp_fem_test1.m  interp_test.m  kd_tree_test1.m  miccai_test_1.m  prostate_cpd_boundary_fem.m  prostate_cpd_fem.m  prostate_cpd_ssm_fem.m  prostate_cpd_test.m  prostate_fem_remesh_test.m  spharm_test1.m  (+19 more)
(+62 files in other folders)
